[tool.poetry]
name = "ppo"
version = "0.1.0"
description = ""
authors = ["Logan Walls <2934282+LoganWalls@users.noreply.github.com>", "Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = "1.11.0"
gym = '==0.17.2'
matplotlib = "^3.7.1"
tensorboard = "^2.12.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
ipdb = "^0.13.9"
ipython = "^8.4.0"
pre-commit = "^2.20.0"
pip = "^22.2.2"
mypy = "^0.971"
flake8 = "^5.0.4"
types-PyYAML = "^6.0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
