[tool.poetry]
name = "varibad"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.13.1"
gym = "^0.17.2"
matplotlib = "^3.7.1"
tensorboard = "^2.12.0"
imageio = "^2.26.1"
mujoco-py = "^2.0.2.10"
seaborn = "^0.12.2"
torchrl = "^0.0.5"
tensordict = "^0.1.0"
torchsnapshot = "^0.1.0"
wandb = "^0.14.1"
ray = {version = "^2.3.1", extras = ["tune"]}
mujoco = "^2.3.5"
dm_alchemy = {git = "https://github.com/ethanabrooks/dm_alchemy.git", rev = "a295e5432d518903a736cda3ec63a0c480fe6312"}
grpcio-tools = "1.49.1"
gitpython = "^3.1.31"
rich = "^13.4.2"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
ipdb = "^0.13.9"
ipython = "^8.4.0"
mypy = "^0.971"
flake8 = "^5.0.4"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
